force-app/main/default/objects/Gutschrift__c/Gutschrift__c.object-meta.xml
<CustomObject>
    <label>Gutschrift</label>
    <nameField>
        <label>Gutschrift-Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gutschriften</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>