force-app/main/default/objects/Gutschrift__c/fields/AdditionalBrokerCommission__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBrokerCommission__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Incentivierung Makler</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>