force-app/main/default/objects/Gutschrift__c/fields/AdditionalBrokerCommissionInPercent__c.field-meta.xml
<CustomField>
    <fullName>AdditionalBrokerCommissionInPercent__c</fullName>
    <formula>AdditionalBrokerCommission__c /  Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incentivierung Makler in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>