force-app/main/default/objects/Gutschrift__c/fields/Bezahlt__c.field-meta.xml
<CustomField>
    <fullName>Bezahlt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bezahlt</label>
    <type>Checkbox</type>
</CustomField>