force-app/main/default/objects/Gutschrift__c/fields/DatumGutschriftBestaetigt__c.field-meta.xml
<CustomField>
    <fullName>DatumGutschriftBestaetigt__c</fullName>
    <label>Datum Gutschrift bestätigt</label>
    <type>Date</type>
</CustomField>