force-app/main/default/objects/Gutschrift__c/fields/Empfaenger__c.field-meta.xml
<CustomField>
    <fullName>Empfaenger__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Empfänger</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gutschriften</relationshipLabel>
    <relationshipName>Gutschriften</relationshipName>
    <type>Lookup</type>
</CustomField>