force-app/main/default/objects/Gutschrift__c/fields/Gesetzliche_MwSt_auf_Provisionszahlung__c.field-meta.xml
<CustomField>
    <fullName>Gesetzliche_MwSt_auf_Provisionszahlung__c</fullName>
    <label>Gesetzliche MwSt. auf Provisionszahlung</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>