force-app/main/default/objects/Gutschrift__c/fields/GutschriftStorniert__c.field-meta.xml
<CustomField>
    <fullName>GutschriftStorniert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutschrift storniert</label>
    <type>Checkbox</type>
</CustomField>