force-app/main/default/objects/Gutschrift__c/fields/GutschriftWurdeGeneriert__c.field-meta.xml
<CustomField>
    <fullName>GutschriftWurdeGeneriert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gutschrift wurde generiert?</label>
    <type>Checkbox</type>
</CustomField>