force-app/main/default/objects/Gutschrift__c/fields/IBAN_formatiert__c.field-meta.xml
<CustomField>
    <fullName>IBAN_formatiert__c</fullName>
    <formula>IF(ISBLANK(Empfaenger__r.Account.IBAN__c), &quot;&quot;,
    UPPER(
        /* 1. Block: Stellen 1-4 (z.B. AE82) */
        MID(SUBSTITUTE(Empfaenger__r.Account.IBAN__c, &quot; &quot;, &quot;&quot;), 1, 4) + &quot; &quot; +
        
        /* 2. Block: Stellen 5-8 */
        MID(SUBSTITUTE(Empfaenger__r.Account.IBAN__c, &quot; &quot;, &quot;&quot;), 5, 4) + &quot; &quot; +
        
        /* 3. Block: Stellen 9-12 */
        MID(SUBSTITUTE(Empfaenger__r.Account.IBAN__c, &quot; &quot;, &quot;&quot;), 9, 4) + &quot; &quot; +
        
        /* 4. Block: Stellen 13-16 */
        MID(SUBSTITUTE(Empfaenger__r.Account.IBAN__c, &quot; &quot;, &quot;&quot;), 13, 4) + &quot; &quot; +
        
        /* 5. Block: Stellen 17-20 */
        MID(SUBSTITUTE(Empfaenger__r.Account.IBAN__c, &quot; &quot;, &quot;&quot;), 17, 4) + &quot; &quot; +
        
        /* 6. Block: Der Rest (Stellen 21-24) */
        MID(SUBSTITUTE(Empfaenger__r.Account.IBAN__c, &quot; &quot;, &quot;&quot;), 21, 4)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IBAN formatiert</label>
    <type>Text</type>
</CustomField>