force-app/main/default/objects/Gutschrift__c/fields/Kaufpreis__c.field-meta.xml
<CustomField>
    <fullName>Kaufpreis__c</fullName>
    <label>Kaufpreis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>