force-app/main/default/objects/Gutschrift__c/fields/KeineEmails__c.field-meta.xml
<CustomField>
    <fullName>KeineEmails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Keine E-Mails</label>
    <type>Checkbox</type>
</CustomField>