force-app/main/default/objects/Gutschrift__c/fields/Kunde__c.field-meta.xml
<CustomField>
    <fullName>Kunde__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kunde</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Gutschriften (Kunde)</relationshipLabel>
    <relationshipName>Gutschriften1</relationshipName>
    <type>Lookup</type>
</CustomField>