force-app/main/default/objects/Gutschrift__c/fields/Laufnummer_Zahl__c.field-meta.xml
<CustomField>
    <fullName>Laufnummer_Zahl__c</fullName>
    <label>Laufnummer Zahl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>