force-app/main/default/objects/Gutschrift__c/fields/LaufnummerNew__c.field-meta.xml
<CustomField>
    <fullName>LaufnummerNew__c</fullName>
    <formula>&apos;GS&apos; + TEXT(YEAR(DatumGutschriftBestaetigt__c)) + LPAD(TEXT( Laufnummer_Zahl__c ), 4 , &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Laufnummer</label>
    <type>Text</type>
</CustomField>