force-app/main/default/objects/Gutschrift__c/fields/MarketingzuschussNichtAusweisen__c.field-meta.xml
<CustomField>
    <fullName>MarketingzuschussNichtAusweisen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketingzuschuss nicht ausweisen</label>
    <type>Checkbox</type>
</CustomField>