force-app/main/default/objects/Gutschrift__c/fields/NameProvision__c.field-meta.xml
<CustomField>
    <fullName>NameProvision__c</fullName>
    <label>Name Provision</label>
    <length>100</length>
    <type>Text</type>
</CustomField>