force-app/main/default/objects/Gutschrift__c/fields/OffenerBetrag__c.field-meta.xml
<CustomField>
    <fullName>OffenerBetrag__c</fullName>
    <label>Offener Betrag</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>