force-app/main/default/objects/Gutschrift__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verkaufschance</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Gutschriften</relationshipLabel>
    <relationshipName>Gutschriften</relationshipName>
    <type>Lookup</type>
</CustomField>