force-app/main/default/objects/Gutschrift__c/fields/OverheadProvisionInProzent__c.field-meta.xml
<CustomField>
    <fullName>OverheadProvisionInProzent__c</fullName>
    <formula>Wert_Overhead__c / Kaufpreis__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overhead Provision in %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>