force-app/main/default/objects/Gutschrift__c/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Provision</label>
    <referenceTo>Provision__c</referenceTo>
    <relationshipLabel>Gutschriften</relationshipLabel>
    <relationshipName>Gutschriften</relationshipName>
    <type>Lookup</type>
</CustomField>