force-app/main/default/objects/Gutschrift__c/fields/Provisionssumme__c.field-meta.xml
<CustomField>
    <fullName>Provisionssumme__c</fullName>
    <formula>Wert_Verkaufsprovision__c + Wert_Tippprovision__c + Wert_Overhead__c + Wert_Maklerprovision__c +  WertMarketingzuschuss__c + AdditionalBrokerCommission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionssumme</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>