force-app/main/default/objects/Gutschrift__c/fields/ProvisionssummeInklUSt__c.field-meta.xml
<CustomField>
    <fullName>ProvisionssummeInklUSt__c</fullName>
    <formula>Provisionssumme__c + Provisionssumme__c * Gesetzliche_MwSt_auf_Provisionszahlung__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionssumme inkl. USt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>