force-app/main/default/objects/Gutschrift__c/fields/ProvisionssummeOhneMarketingzuschuss__c.field-meta.xml
<CustomField>
    <fullName>ProvisionssummeOhneMarketingzuschuss__c</fullName>
    <formula>Wert_Verkaufsprovision__c + Wert_Tippprovision__c + Wert_Overhead__c + Wert_Maklerprovision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisionssumme ohne Marketingzuschuss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>