force-app/main/default/objects/Gutschrift__c/fields/StornoLaufnummer__c.field-meta.xml
<CustomField>
    <fullName>StornoLaufnummer__c</fullName>
    <formula>&apos;SB&apos; + TEXT(YEAR( DatumGutschriftStorniert__c )) + LPAD(TEXT( StornoLaufnummerZahl__c ), 4 , &apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Storno Laufnummer</label>
    <type>Text</type>
</CustomField>