force-app/main/default/objects/Gutschrift__c/fields/StornoLaufnummerZahl__c.field-meta.xml
<CustomField>
    <fullName>StornoLaufnummerZahl__c</fullName>
    <label>Storno Laufnummer Zahl</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>