force-app/main/default/objects/Gutschrift__c/fields/Wert_Maklerprovision__c.field-meta.xml
<CustomField>
    <fullName>Wert_Maklerprovision__c</fullName>
    <label>Wert Maklerprovision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>