force-app/main/default/objects/Gutschrift__c/fields/Wert_Verkaufsprovision__c.field-meta.xml
<CustomField>
    <fullName>Wert_Verkaufsprovision__c</fullName>
    <label>Wert Verkaufsprovision</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>