force-app/main/default/objects/Gutschrift__c/fields/WertMarketingzuschuss__c.field-meta.xml
<CustomField>
    <fullName>WertMarketingzuschuss__c</fullName>
    <label>Wert Marketingzuschuss</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>