force-app/main/default/objects/Gutschrift__c/fields/ZuDatevUebertragen__c.field-meta.xml
<CustomField>
    <fullName>ZuDatevUebertragen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zu Datev übertragen</label>
    <type>Checkbox</type>
</CustomField>