force-app/main/default/objects/Gutschrift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StornoWurdeGeneriert__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Alle</label>
</ListView>