force-app/main/default/objects/Gutschrift__c/listViews/Zahlen_Gutschriften.listView-meta.xml
<ListView>
    <fullName>Zahlen_Gutschriften</fullName>
    <columns>NAME</columns>
    <columns>MaklerprovisionInProzent__c</columns>
    <columns>Provisionssumme__c</columns>
    <columns>ProvisionssummeInklUSt__c</columns>
    <columns>Wert_Maklerprovision__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Teilobjekt__c</columns>
    <columns>Objekt__c</columns>
    <filterScope>Everything</filterScope>
    <label>Zahlen Gutschriften</label>
</ListView>